sec: added jdbc and postgre